# Pi_Camera-1

./: .env.example  .gitignore  404.html  CHANGELOG.md  PLAN.md  PLAN2.md  PLAN3.md  PROGRESS.md  README.md  alt_plan.md  index.html  mkdocs.yml  objects.inv  pi-camera.service  pyproject.toml  thread-map.html
.github/workflows/: ci.yml
01-reqs/: requirements.txt
02-scripts/: analyze_brightness_channels.py  analyze_clips.py  analyze_reflections.py  brightness_trajectory.py  camera.py  combine_analysis.py  config.py  cross_analysis.py  drive_uploader.py  dropbox_uploader.py  duration_stats.py  event_log.py  heatmap_analysis.py  interval_analysis.py  main.py  motion_detector.py  notifier.py  run_test.sh  storage.py  telegram_notifier.py  verify_shutdown.py  verify_timing.py
03-tests/: conftest.py  test_combine_analysis.py  test_config.py  test_drive_uploader.py  test_dropbox_uploader.py  test_event_log.py  test_main.py  test_motion_detector.py  test_notifier.py  test_storage.py  test_telegram_notifier.py
04-docs/: analysis.md  api.md  clip-timing.md  detection.md  false-trigger-analysis.html  index.md  plan-compare.html  thread-map.html
PI_Camera/: PLAN.md
PI_Camera/01-reqs/: requirements.txt
PI_Camera/02-scripts/: motion_detector.py  notifier.py  storage.py
analysis/: index.html
api/: index.html
clip-timing/: index.html
detection/: index.html
docs/: index.md
search/: search_index.json
