[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["02-scripts"]

[project]
name = "pi-camera"
version = "0.1.0"
description = "Pi Night Vision Motion Camera with motion detection and Gmail alerts"
authors = [
    { name = "Geoff Van Horn", email = "geoffrey@g2voptics.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "opencv-python-headless",
    "python-dotenv",
    "requests",
    # picamera2 is installed via apt on Raspberry Pi OS:
    #   sudo apt install python3-picamera2
    # Do not add it here — pip/uv cannot install it correctly on Pi.
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["03-tests"]
